Changelog
=========
v1.4 (Unreleased)
-----------------
* Bugfix: ending message for the sync river
  [pasoviul - #18419]
* Feature: added support for multiple queries
  [pasoviul - #18419]

v1.3 (2014-06-27)
-----------------
* Feature: added delete option for when the endpoint does not contain modified resources
  [pasoviul - #18928]

v1.2 (2014-01-23)
-----------------
* Feature: added synchronization option for the endpoint
  [pasoviul - #17426]
* Feature: added whiteMap with values of objects to keep
  [pasoviul - #17459]
* Bugfix: whitelist only added the first element 
  [pasoviul - #16693]
* Feature: separated normalization into prop & obj; Added object normalization
  [pasoviul - #17076]
* Feature: added blackMap with values of objects to ignore
  [pasoviul - #17076]

v1.1 (2013-10-07)
-----------------
* Change: duplicate release v1.0
  [pasoviul]

v1.0 (2013-10-07)
-----------------
* Feature: initial release
  [pasoviul]